--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists all individuals having contributed content to the repository.
 
-Eniade-Aduroja Oluwademilade Eniade-Aduroja
+Eniade-Aduroja Oluwademilade
 Mawuena Kossi Baboh
